--- a/views/index.pug
+++ b/views/index.pug
@@ -64,7 +64,7 @@ html(lang='en')
               option= fixedAmountDiscountedOn
           br
         br
-        input.btn.btn-default(type='submit' value="Generate")
+        input.btn.btn-default(type='submit' value="Calculate")
         br
         br
         br
